# DSPy-GEPA-BI

./: .env.example  .gitignore  GITHUB_SETUP.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  project.yaml
dashboards/lookml/: README.md
dashboards/powerbi/: BI_Project.pbix  README.md
eval/benchmarks/: kpi_tasks.jsonl  sql_tasks.jsonl
scripts/: eval_sql.sh  init_data.py  run_etl.sh  run_gepa_search.sh
src/: __init__.py
src/app/: __init__.py  alerts.py  dashboard_app.py
src/dspy_programs/: __init__.py  graders.py  insight_writer.py  kpi_compiler.py  runbooks.py  sql_synth.py
src/etl/: __init__.py  extract.py  load.py  transform.sql
src/eval/: __init__.py  scorer.py
src/gepa/: __init__.py  components.py  loop.py  objectives.py  reflectors.py
src/metrics/: __init__.py  dax_writer.py  kpis.yaml  validators.py
src/scripts/: __init__.py  compare_baselines.py  eval_sql.py  run_app.py  run_etl.py  run_gepa_search.py  run_real_gepa.py
src/utils/: __init__.py  duck.py  io.py  io_jsonl.py  seed.py
